[package]
name = "context_lm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.scripts]
clippy-strict = "cargo clippy -- -D warnings -W clippy::pedantic"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1", features = ["full"]}
dotenv = "0.15.0"
scraper = "0.20"
html2md = "0.2.14"
pdf-extract = "0.7.9"
regex = "1.10.6"
actix-web = "4.0"
actix-files = "0.6"
futures = "0.3.30"
